--- a/javascript/前端上报工具/package.json
+++ b/javascript/前端上报工具/package.json
@@ -8,6 +8,7 @@
     "build": "set NODE_ENV=production&&webpack --mode=production"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "4.17.1"
   },
   "author": "liubasara",
