--- a/javascript/实现大文件断点续传/package.json
+++ b/javascript/实现大文件断点续传/package.json
@@ -12,5 +12,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "spark-md5": "^3.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
