--- a/javascript/实现大文件断点续传/package.json
+++ b/javascript/实现大文件断点续传/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "connect-multiparty": "^2.2.0",
-    "express": "^4.17.1",
-    "spark-md5": "^3.0.1"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
