--- a/javascript/rollup打包学习/package.json
+++ b/javascript/rollup打包学习/package.json
@@ -4,11 +4,20 @@
   "description": "",
   "main": "lib/index.js",
   "scripts": {
-    "build": "node build/index"
+    "build": "node build/index",
+    "build:watch": "npm run build --watch"
   },
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "@babel/runtime": "^7.12.5"
+  },
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/plugin-transform-runtime": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@rollup/plugin-babel": "^5.2.2",
+    "chalk": "^4.1.0",
     "rollup": "^2.34.2"
   }
 }
