--- a/javascript/rollup打包学习/package.json
+++ b/javascript/rollup打包学习/package.json
@@ -5,19 +5,26 @@
   "main": "lib/index.js",
   "scripts": {
     "build": "node build/index",
-    "build:watch": "npm run build --watch"
+    "build:watch": "npm run build --watch",
+    "build:test": "rollup -c -w"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/runtime": "^7.12.5"
+    "@babel/runtime": "^7.12.5",
+    "lodash": "^4.17.20"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@rollup/plugin-babel": "^5.2.2",
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-node-resolve": "^11.0.1",
+    "@rollup/plugin-typescript": "^6.0.0",
     "chalk": "^4.1.0",
-    "rollup": "^2.34.2"
+    "rollup": "^2.36.0",
+    "tslib": "^2.1.0",
+    "typescript": "^4.1.1"
   }
 }
