--- a/javascript/实现大文件断点续传/package.json
+++ b/javascript/实现大文件断点续传/package.json
@@ -4,14 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon"
+    "start": "nodemon",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/jest": "^26.0.23",
     "body-parser": "^1.19.0",
     "connect-multiparty": "^2.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "jest": "^26.6.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
