--- a/docker/network/nginx/package.json
+++ b/docker/network/nginx/package.json
@@ -9,9 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "lodash": "^4.17.21",
     "node-docker-api": "^1.1.22"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.182",
     "@types/node": "^18.0.5",
     "ts-node": "^10.9.1",
     "tslib": "^2.4.0",
