--- a/docker/network/nginx/package.json
+++ b/docker/network/nginx/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/tar": "^6.1.1",
     "lodash": "^4.17.21",
-    "node-docker-api": "^1.1.22"
+    "node-docker-api": "^1.1.22",
+    "tar": "^6.1.11"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.182",
